Some progress in adaptive design

--- a/index.html
+++ b/index.html
@@ -322,22 +322,13 @@
         </section>
         <!-- Cover section -->
         <section class="cover">
-          <img
-            class="cover__image"
-            src="./images/cover-trains.jpg"
-            alt="Railroads"
-          />
-          <div class="cover__overlay"></div>
-          <div class="cover__text-container">
-            <h2 class="section-title">До Байкала «на собаках»</h2>
-            <p class="cover__text">
-              По мотивам учебной темы о Транссибе — путешествие от столицы до
-              Байкала на электричках.
-            </p>
-          </div>
+          <h2 class="section-title cover__title">До Байкала «на собаках»</h2>
+          <p class="cover__text">
+            По мотивам учебной темы о Транссибе — путешествие от столицы до
+            Байкала на электричках.
+          </p>
         </section>
       </main>
-
       <!-- Footer -->
       <footer class="footer">
         <nav class="footer__nav-bar">
