Minor fixes in css and html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,17 +12,18 @@
     />
     <title>Russia Travel</title>
   </head>
-  <body>
-    <!-- Root element -->
+  <!-- Root -->
+  <body class="root">
+    <!-- Page -->
     <div class="page">
       <!-- Header -->
       <header class="header">
         <nav class="navigation-bar">
-          <div class="logo">
-            <a href="#"
-              ><img src="./images/header-logo.svg" alt="Russia Travel logo/"
-            /></a>
-          </div>
+          <a class="logo" href="#"
+            ><img
+              src="./images/header-logo.svg"
+              alt="Logo of Russia Travel website"
+          /></a>
           <ul class="lang-menu">
             <li class="lang-menu__menu-item">
               <a class="lang-menu__lang-link lang-menu__lang-link_ru" href="#"
@@ -322,11 +323,16 @@
         </section>
         <!-- Cover section -->
         <section class="cover">
-          <h2 class="section-title cover__title">До Байкала «на собаках»</h2>
-          <p class="cover__text">
-            По мотивам учебной темы о Транссибе — путешествие от столицы до
-            Байкала на электричках.
-          </p>
+          <a
+            class="cover__overlay"
+            href="https://stampsy.com/na-elektrichkakh-do-baikala"
+          >
+            <h2 class="section-title cover__title">До Байкала «на собаках»</h2>
+            <p class="cover__subtitle">
+              По мотивам учебной темы о Транссибе — путешествие от столицы до
+              Байкала на электричках.
+            </p>
+          </a>
         </section>
       </main>
       <!-- Footer -->
