--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <nav class="navigation-bar">
           <a class="logo" href="#"
             ><img
+              class="logo__image"
               src="./images/header-logo.svg"
               alt="Logo of Russia Travel website"
           /></a>
@@ -169,27 +170,25 @@
         </section>
         <!-- Places section -->
         <section class="places">
-          <div class="places__item">
-            <h2 class="places__title section-title">Куршская коса</h2>
-            <div class="places__link-container">
-              <p class="places__url">URL</p>
-              <a class="places__link" href="http://park-kosa.ru"
-                >park-kosa.ru</a
-              >
+          <div class="place">
+            <h2 class="place__title">Куршская коса</h2>
+            <div class="place__link-container">
+              <p class="place__url">URL</p>
+              <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
             </div>
             <img
-              class="places__image"
+              class="place__image full-width"
               src="./images/place-kosa.jpg"
               alt="Curonian Spit National park"
             />
-            <div class="places__text-container">
-              <p class="places__text">
+            <div class="place__text-container">
+              <p class="place__text">
                 Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
                 водных горизонта — спокойного Куршского залива с одной стороны и
                 подёрнутого рябью волн Балтийского моря с другой. Уникальная
                 природная зона на краю российского анклава.
               </p>
-              <p class="places__text">
+              <p class="place__text">
                 На этом Калининградская область не заканчивается. Для
                 путешественника и исследователя там же по соседству — самая
                 западная точка России, Балтийская коса, — и немецкое наследие
@@ -199,28 +198,28 @@
               </p>
             </div>
           </div>
-          <div class="places__item">
-            <h2 class="places__title section-title">Кольский</h2>
-            <div class="places__link-container">
-              <p class="places__url">URL</p>
+          <div class="place">
+            <h2 class="place__title">Кольский</h2>
+            <div class="place__link-container">
+              <p class="place__url">URL</p>
               <a
-                class="places__link"
+                class="place__link"
                 href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                 >National Geographic</a
               >
             </div>
             <img
-              class="places__image"
+              class="place__image full-width"
               src="./images/place-kolsky.jpg"
               alt="Kolsky district during winter"
             />
-            <div class="places__text-container">
-              <p class="places__text">
+            <div class="place__text-container">
+              <p class="place__text">
                 Почти весь полуостров находится за Полярным кругом. Саамская
                 тундра, от которой на юг — тайга, а на север — Ледовитый океан,
                 прикидывающийся Баренцевым морем.
               </p>
-              <p class="places__text">
+              <p class="place__text">
                 Возможно, вы смотрели Звягинцева и даже слышали историю
                 арктического фестиваля в Териберке. Возможно, слово «Хибины» не
                 осталось под снегом школьных воспоминаний об уроках географии.
@@ -231,30 +230,30 @@
               </p>
             </div>
           </div>
-          <div class="places__item">
-            <h2 class="places__title section-title">Алтай</h2>
-            <div class="places__link-container">
-              <p class="places__url">URL</p>
+          <div class="place">
+            <h2 class="place__title section-title">Алтай</h2>
+            <div class="place__link-container">
+              <p class="place__url">URL</p>
               <a
-                class="places__link"
+                class="place__link"
                 href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ"
                 >YouTube
               </a>
             </div>
             <img
-              class="places__image"
+              class="place__image full-width"
               src="./images/place-altai.jpg"
               alt="Open laptop on a wooden porch in Altaj taiga"
             />
-            <div class="places__text-container">
-              <p class="places__text">
+            <div class="place__text-container">
+              <p class="place__text">
                 Алтай — одно из красивейших мест в России. В первую очередь
                 из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
                 соснами, горные реки и озёра. А если вы откроете в автомобиле
                 окна, сможете познакомиться с невидимым чудом здешних мест —
                 горным воздухом.
               </p>
-              <p class="places__text">
+              <p class="place__text">
                 Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
                 Так вы увидите всё разнообразие местной флоры и фауны. По лесам
                 Алтая бродят лоси, над хребтами летают орлы, а на равнинах
@@ -263,24 +262,24 @@
               </p>
             </div>
           </div>
-          <div class="places__item">
-            <h2 class="places__title section-title">Зимний Байкал</h2>
-            <div class="places__link-container">
-              <p class="places__url">URL</p>
-              <a class="places__link" href="https://vk.com/baikalmile">VK </a>
+          <div class="place">
+            <h2 class="place__title section-title">Зимний Байкал</h2>
+            <div class="place__link-container">
+              <p class="place__url">URL</p>
+              <a class="place__link" href="https://vk.com/baikalmile">VK </a>
             </div>
             <img
-              class="places__image"
+              class="place__image full-width"
               src="./images/place-winter-baikal.jpg"
               alt="Frozen lake Baikal"
             />
-            <div class="places__text-container">
-              <p class="places__text">
+            <div class="place__text-container">
+              <p class="place__text">
                 Всем известен Байкал как крупнейшее озеро в мире. Многие также
                 знают, что это самый большой источник пресной воды и одно из
                 красивейших мест в России.
               </p>
-              <p class="places__text">
+              <p class="place__text">
                 Конечно, это всё так. Но Байкал ещё идеальное место
                 для соревнований по скийорингу. Это такой вид спорта, когда
                 лыжник привязывает себя к мотоциклу, и тандем старается развить
@@ -290,33 +289,30 @@
               </p>
             </div>
           </div>
-          <div class="places__item">
-            <h2 class="places__title section-title">Карелия</h2>
-            <div class="places__link-container">
-              <p class="places__url">URL</p>
-              <a class="places__link" href="http://vodlozero.ru/"
+          <div class="place">
+            <h2 class="place__title section-title">Карелия</h2>
+            <div class="place__link-container">
+              <p class="place__url">URL</p>
+              <a class="place__link" href="http://vodlozero.ru/"
                 >http://vodlozero.ru/</a
               >
             </div>
             <img
-              class="places__image"
+              class="place__image full-width"
               src="./images/place-karelia.jpg"
               alt="Karelia lake"
             />
-            <div class="places__text-container">
-              <p class="places__text">
+            <div class="place__text-container">
+              <p class="place__text">
                 Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
                 сибирская лиственница не растёт западнее Водлозера. Зато здесь
                 она вымахивает на 30 метров — леса карельских национальных
                 парков из-за непроходимых болот никогда не знали топора.
-                Некоторым соснам уже больше чем полтысячелетия.
-              </p>
-              <p class="places__text">
-                Прикоснитесь к живому существу, видевшему солнце раньше, чем
-                увидал его Иван Грозный. В девственном лесу на сотню километров
-                не встретишь тропы. А на редких тропинках деревья в паре метров
-                от земли помечены медвежьими когтями. Чтобы все знали, кто тут
-                хозяин.
+                Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к
+                живому существу, видевшему солнце раньше, чем увидал его Иван
+                Грозный. В девственном лесу на сотню километров не встретишь
+                тропы. А на редких тропинках деревья в паре метров от земли
+                помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
               </p>
             </div>
           </div>
@@ -361,7 +357,9 @@
               >
             </li>
           </ul>
-          <a class="footer__copyright" href="#">&#169; Valeriia Evstratova</a>
+          <a class="footer__copyright" href="#"
+            >&#169; 2023 Valeriia Evstratova</a
+          >
         </nav>
       </footer>
     </div>
