Minor fix in html tree

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </section>
         <!-- Intro section -->
         <section class="intro">
-          <article class="intro__article">
+          <div class="intro__article">
             <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">
               По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но
@@ -91,7 +91,7 @@
                 Аэропортов <span class="intro__list-number">241</span>
               </li>
             </ul>
-          </article>
+          </div>
         </section>
         <!-- Grid gallery -->
         <section class="gallery">
@@ -163,7 +163,6 @@
 
           <img
             class="gallery__image"
-            class="photo-grid__image"
             src="./images/photo-grid-ergaki.jpg"
             alt="Ergaki mountains"
           />
