Minor fixes in img alt attributes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           ><img
             class="logo__image"
             src="./images/header-logo.svg"
-            alt="Логотип сайта Путешествия по России"
+            alt="Логотип сайта Путешествия по России."
         /></a>
         <ul class="lang-menu">
           <li class="lang-menu__menu-item">
@@ -48,7 +48,7 @@
             <img
               class="lead__illustration"
               src="./images/lead-polka.jpg"
-              alt="Женщина спит на нижней полке в поезде"
+              alt="Женщина спит на нижней полке в поезде."
             />
             <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
           </figure>
@@ -101,21 +101,21 @@
               <img
                 class="gallery__image"
                 src="./images/photo-grid-train.jpg"
-                alt="Вид из окна поезда"
+                alt="Вид на озеро из окна поезда."
               />
             </li>
             <li>
               <img
                 class="gallery__image"
                 src="./images/photo-grid-atharva-tulsi.jpg"
-                alt="Заснеженные верхушки гор касаются облаков"
+                alt="Заснеженные верхушки гор касаются облаков."
               />
             </li>
             <li>
               <img
                 class="gallery__image"
                 src="./images/photo-grid-tuman.jpg"
-                alt="Овчарка в закутанном туманом поле"
+                alt="Овчарка в закутанном туманом поле."
               />
             </li>
 
@@ -123,7 +123,7 @@
               <img
                 class="gallery__image"
                 src="./images/photo-grid-sochi.jpg"
-                alt="Национальный парк города Сочи"
+                alt="Национальный парк города Сочи."
               />
             </li>
 
@@ -131,56 +131,56 @@
               <img
                 class="gallery__image"
                 src="./images/photo-grid-arisa.jpg"
-                alt="Байкал в ледяном плену"
+                alt="Байкал в ледяном плену."
               />
             </li>
             <li>
               <img
                 class="gallery__image"
                 src="./images/photo-grid-baikal.jpg"
-                alt="Берег озера Байкал"
+                alt="Берег озера Байкал."
               />
             </li>
             <li>
               <img
                 class="gallery__image"
                 src="./images/photo-grid-elbrus.jpg"
-                alt="Гора Эльбрус"
+                alt="Гора Эльбрус."
               />
             </li>
             <li>
               <img
                 class="gallery__image"
                 src="./images/photo-grid-kondratiev.jpg"
-                alt="Знак пешеходного перехода"
+                alt="Знак пешеходного перехода."
               />
             </li>
             <li>
               <img
                 class="gallery__image"
                 src="./images/photo-grid-kamchatka-1.jpg"
-                alt="Полуостров КамчаткаГоры Камчатского края"
+                alt="Полуостров КамчаткаГоры Камчатского края."
               />
             </li>
             <li>
               <img
                 class="gallery__image"
                 src="./images/photo-grid-kamchatka-2.jpg"
-                alt="Горы Камчатского края"
+                alt="Горы Камчатского края."
               />
             </li>
             <li>
               <img
                 class="gallery__image"
                 src="./images/photo-grid-baikal-2.jpg"
-                alt="Озеро Байкал с высоты птичьего полета"
+                alt="Озеро Байкал с высоты птичьего полета."
               />
             </li>
             <li>
               <img
                 class="gallery__image"
                 src="./images/photo-grid-ergaki.jpg"
-                alt="Природный парк Ергаки"
+                alt="Природный парк Ергаки."
               />
             </li>
           </ul>
@@ -199,7 +199,7 @@
             <img
               class="place__image full-width"
               src="./images/place-kosa.jpg"
-              alt="Удивительное творение ветра и волн Балтийского моря"
+              alt="Удивительное творение ветра и волн Балтийского моря."
             />
             <div class="place__text-container">
               <p class="place__text">
@@ -231,7 +231,7 @@
             <img
               class="place__image full-width"
               src="./images/place-kolsky.jpg"
-              alt="Зимние сумерки на Кольском полуострове"
+              alt="Зимние сумерки на Кольском полуострове."
             />
             <div class="place__text-container">
               <p class="place__text">
@@ -251,7 +251,7 @@
             </div>
           </article>
           <article class="place">
-            <h2 class="place__title section-title">Алтай</h2>
+            <h2 class="place__title">Алтай</h2>
             <div class="place__link-container">
               <p class="place__url">url</p>
               <a
@@ -263,7 +263,7 @@
             <img
               class="place__image full-width"
               src="./images/place-altai.jpg"
-              alt="Леса Алтайского края"
+              alt="Леса Алтайского края."
             />
             <div class="place__text-container">
               <p class="place__text">
@@ -283,7 +283,7 @@
             </div>
           </article>
           <article class="place">
-            <h2 class="place__title section-title">Зимний Байкал</h2>
+            <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__link-container">
               <p class="place__url">url</p>
               <a class="place__link" href="https://vk.com/baikalmile"
@@ -293,7 +293,7 @@
             <img
               class="place__image full-width"
               src="./images/place-winter-baikal.jpg"
-              alt="Замерзшее озеро Байкал"
+              alt="Замерзшее озеро Байкал."
             />
             <div class="place__text-container">
               <p class="place__text">
@@ -312,7 +312,7 @@
             </div>
           </article>
           <article class="place">
-            <h2 class="place__title section-title">Карелия</h2>
+            <h2 class="place__title">Карелия</h2>
             <div class="place__link-container">
               <p class="place__url">url</p>
               <a class="place__link" href="http://vodlozero.ru/"
@@ -322,7 +322,7 @@
             <img
               class="place__image full-width"
               src="./images/place-karelia.jpg"
-              alt="Озера Карелии"
+              alt="Озера Карелии."
             />
             <div class="place__text-container">
               <p class="place__text">
@@ -345,7 +345,7 @@
             class="cover__overlay"
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
           >
-            <h2 class="section-title cover__title">До Байкала «на собаках»</h2>
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">
               По мотивам учебной темы о Транссибе — путешествие от столицы до
               Байкала на электричках.
