Added two sections on the webpage

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
           </figure>
         </section>
+
         <!-- Intro section -->
         <section class="intro">
           <div class="intro__wrapper">
@@ -91,6 +92,7 @@
             </ul>
           </div>
         </section>
+
         <!-- Grid gallery -->
         <section
           class="gallery"
@@ -185,6 +187,7 @@
             </li>
           </ul>
         </section>
+
         <!-- Places section -->
         <section
           class="places"
@@ -339,6 +342,91 @@
             </div>
           </article>
         </section>
+
+        <!-- Media -->
+        <section class="media">
+          <h2 class="media__title">В глубины Земли и в дальний космос</h2>
+          <p class="media__subtitle">
+            Видео от студии Stereotactic о местах в России, где ведутся
+            фундаментальные исследования
+          </p>
+          <article class="media__container">
+            <div class="media__item">
+              <img
+                class="media__play-icon"
+                src="./images/icon-play.svg"
+                alt="Иконка play."
+              />
+              <div class="media__text">
+                <p class="media__duration">6:30</p>
+                <h3 class="media__name">Colors of Kamchatka</h3>
+                <p class="media__director">Director: Pavel Karykhalin</p>
+              </div>
+            </div>
+            <div class="media__item">
+              <img
+                class="media__play-icon"
+                src="./images/icon-play.svg"
+                alt="Иконка play."
+              />
+              <div class="media__text">
+                <p class="media__duration">24:45</p>
+                <h3 class="media__name">Обсерватория | Observatory</h3>
+                <p class="media__director">Director: Alexander Khudokon</p>
+              </div>
+            </div>
+          </article>
+        </section>
+
+        <!-- Testimonials -->
+        <section class="testimonials">
+          <h2 class="testimonials__title">Фотографы, снимающие Россию</h2>
+          <p class="testimonials__subtitle">
+            Природа и люди вдохновили их работы, удостоенные наград на
+            международных конкурсах
+          </p>
+          <article class="testimonials__container">
+            <div class="testimonials__item">
+              <img
+                class="testimonials__photo"
+                src="./images/cheddarini.png"
+                alt="Маленькая коричневая собака."
+              />
+              <quote class="testimonials__quote"
+                >«Если вам кажется, что в России ничего не происходит, то просто
+                выгляньте “наружу”…»</quote
+              >
+              <p class="testimonials__author">Виктор Лягушкин</p>
+            </div>
+            <div class="testimonials__item">
+              <img
+                class="testimonials__photo"
+                src="./images/peki-japanese.png"
+                alt="Пекинес с японским головным убором."
+              />
+              <quote class="testimonials__quote"
+                >«Если в город едут туристы — неважно за чем они туда едут: за
+                шамбалой или фрески Рублева искать, или на родину Тарковского —
+                туристы обеспечивают любой город молодёжью, рабочими местами и в
+                конечном счёте наполняют его жизнью.»</quote
+              >
+              <p class="testimonials__author">Иван Хафизов</p>
+            </div>
+            <div class="testimonials__item">
+              <img
+                class="testimonials__photo"
+                src="./images/peki-sleep.png"
+                alt="Пекинес в ночном колпаке."
+              />
+              <quote class="testimonials__quote"
+                >«Ты приезжаешь, и люди рассказывают тебе, как им плохо. А когда
+                ты покажешь, как им плохо, то ты сволочь и всё очернил.»</quote
+              >
+              <p class="testimonials__author">Сергей Максимишин</p>
+            </div>
+          </article>
+        </section>
+
         <!-- Cover section -->
         <section class="cover">
           <a
@@ -353,6 +441,7 @@
           </a>
         </section>
       </main>
+
       <!-- Footer -->
       <footer class="footer">
         <nav class="footer__nav-bar">
